--- a/index.html
+++ b/index.html
@@ -26,6 +26,22 @@
     <main class="projetos">
       <ul class="projetos-titulo">Projetos</ul>
       <li class="projetos-item">
+        <p>Super trunfo</p>
+        <p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="html,result" data-slug-hash="bGRjKqR" data-user="rafenex" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+          <span>See the Pen <a href="https://codepen.io/rafenex/pen/bGRjKqR">
+              Super Trunfo - Dia 8</a> by rafenex (<a href="https://codepen.io/rafenex">@rafenex</a>)
+            on <a href="https://codepen.io">CodePen</a>.</span>
+        </p>
+        <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+
+        <p>O mentalista</p>
+        <p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="html,result" data-slug-hash="VwWrrrv" data-user="rafenex" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+          <span>See the Pen <a href="https://codepen.io/rafenex/pen/VwWrrrv">
+              Mentalista - ID3</a> by rafenex (<a href="https://codepen.io/rafenex">@rafenex</a>)
+            on <a href="https://codepen.io">CodePen</a>.</span>
+        </p>
+        <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+
         <p> Conversor de moeda</p>
       </li>
       <p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="html,result" data-slug-hash="ExXbNMe" data-user="rafenex" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
@@ -36,13 +52,28 @@
       <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
       <li class="projetos-item">
         <p> Aluraflix</p>
+        <p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="html,result" data-slug-hash="yLXvvjY" data-user="rafenex" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+          <span>See the Pen <a href="https://codepen.io/rafenex/pen/yLXvvjY">
+              Aluraflix - dia 5</a> by rafenex (<a href="https://codepen.io/rafenex">@rafenex</a>)
+            on <a href="https://codepen.io">CodePen</a>.</span>
+        </p>
+        <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+        <p>Tabela de classificação</p>
+        <p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="html,result" data-slug-hash="OJgZMMN" data-user="rafenex" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+          <span>See the Pen <a href="https://codepen.io/rafenex/pen/OJgZMMN">
+              Tabela de classificação</a> by rafenex (<a href="https://codepen.io/rafenex">@rafenex</a>)
+            on <a href="https://codepen.io">CodePen</a>.</span>
+        </p>
+        <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+        <p>Calculo de média</p>
+        <p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="html,result" data-slug-hash="mdwwYpP" data-user="rafenex" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+          <span>See the Pen <a href="https://codepen.io/rafenex/pen/mdwwYpP">
+              Calculadora de média</a> by rafenex (<a href="https://codepen.io/rafenex">@rafenex</a>)
+            on <a href="https://codepen.io">CodePen</a>.</span>
+        </p>
+        <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+
       </li>
-      <p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="html,result" data-slug-hash="yLXvvjY" data-user="rafenex" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
-        <span>See the Pen <a href="https://codepen.io/rafenex/pen/yLXvvjY">
-            Aluraflix - dia 5</a> by rafenex (<a href="https://codepen.io/rafenex">@rafenex</a>)
-          on <a href="https://codepen.io">CodePen</a>.</span>
-      </p>
-      <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
 
     </main>
 
